--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "prisma": "^6.15.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "youtube-search-api": "^2.0.1",
     "zod": "^4.1.5"
   },
   "devDependencies": {
