--- a/app/package.json
+++ b/app/package.json
@@ -10,11 +10,17 @@
   },
   "dependencies": {
     "@prisma/client": "6.15.0",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@vercel/analytics": "^1.5.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "next-auth": "5.0.0-beta.29",
     "prisma": "^6.15.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1",
     "youtube-search-api": "^2.0.1",
     "zod": "^4.1.5"
   },
@@ -27,6 +33,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5"
   }
 }
